# llm-utils

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: runer_demo.py
llm_utils/: llm_parsers.py  semantic_sample.py  train_bert.py
llm_utils/clients/: README.md  base.py  factory.py  google_genai_client.py  key_rotation.py  mock_client.py  openai_client.py
llm_utils/data/: README.md  analyze_token_lengths.py  dataset_loading.py  intersect_dataset.py  semantic_sample.py
llm_utils/inference/: run_bert.py  run_t5.py  test_bert.py  test_t5.py
llm_utils/interfacing/: README.md  __init__.py  base_client.py  bert_ner.py  client_factory.py  cue_parser.py  google_genai_client.py  key_rotation.py  llm_request.py  mock_client.py  mock_llm_client.py
llm_utils/ner/: README.md  __init__.py  core.py  embeddings.py
llm_utils/parsers/: json_parser.py
llm_utils/pipelines/: lora_autotag.py
llm_utils/training/: README.md  callbacks.py  evaluation_utils.py  graph_class_f1_eval.py  prepare_dataset.py  save_utils.py  train_bert.py  train_bert_ner.py  train_t5.py  utils.py
tests/: test_cue_parser.py  test_dataset_loading.py  test_evaluation_utils.py  test_llm_parsers.py  test_prepare_dataset.py
tests/data/: test_analyze_token_lengths.py  test_intersect_dataset.py  test_semantic_sample.py
tests/interfacing/: test_backoff_and_rotation.py  test_base_client_retry.py  test_exception_inheritance.py  test_factory.py  test_google_genai_client.py  test_google_genai_client_rotation.py  test_key_rotation.py  test_llm_request.py  test_mock_client.py  test_mock_llm_client.py
tests/ner/: test_runer_core.py  test_runer_interface.py
tests/training/: capture_trainer.py  test_evaluation_utils.py  test_train_t5.py  test_train_t5_trainer_integration.py
