[project]
name = "llm-utils"
version = "0.1.0"
description = "Lightweight utilities for LLM data parsing and training"
authors = [
    { name="Mitchell Currie" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/mitchins/llm-utils"

[tool.setuptools]
packages = ["llm_utils"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
